<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_imu</name>
  <version>1.1.0</version>
  <description>QRB ROS IMU component</description>
  <maintainer email="quic_zhanlin@quicinc.com">Zhanye Lin</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>qrb_ros_transport_imu_type</depend>
  <depend>qrb_sensor_client</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
